force-app/main/default/objects/Account/fields/Lottery_Message__c.field-meta.xml
<CustomField>
    <fullName>Lottery_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lottery Message</label>
    <length>500</length>
    <type>Html</type>
</CustomField>