force-app/main/default/objects/Account/fields/Lottery_Submission_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Lottery_Submission_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lottery Submission End Date</label>
    <type>DateTime</type>
</CustomField>