force-app/main/default/objects/Account/fields/MaxBirthdate__c.field-meta.xml
<CustomField>
    <fullName>MaxBirthdate__c</fullName>
    <description>Birth date when a student becomes too old to be eligible for Academic Program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Birthdate Max Cutoff</label>
    <type>Date</type>
</CustomField>