force-app/main/default/objects/Account/fields/MaxSpecialEdBirthdate__c.field-meta.xml
<CustomField>
    <fullName>MaxSpecialEdBirthdate__c</fullName>
    <description>Birth date when a student becomes too old to be eligible for Academic Program&apos;s Special Education programs</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Special Education Birthdate Max Cutoff</label>
    <type>Date</type>
</CustomField>