force-app/main/default/objects/Account/fields/Migratory_Info__c.field-meta.xml
<CustomField>
    <fullName>Migratory_Info__c</fullName>
    <label>Migratory Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>