force-app/main/default/objects/Account/fields/Migratory_Type_Of_Work__c.field-meta.xml
<CustomField>
    <fullName>Migratory_Type_Of_Work__c</fullName>
    <label>Migratory Type Of Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture - Planting/picking Vegetables Or Fruits Such As Tomatoes, Squash, Grapes, Onions, Etc.</fullName>
            </value>
            <value>
                <fullName>Dairy/Poultry/Livestock</fullName>
            </value>
            <value>
                <fullName>Detassel Corn</fullName>
            </value>
            <value>
                <fullName>Fishing or fish farms</fullName>
            </value>
            <value>
                <fullName>Flora culture/gladiola farm</fullName>
            </value>
            <value>
                <fullName>Green house or plant nursery</fullName>
            </value>
            <value>
                <fullName>Meatpacking/Meat processing/Seafood</fullName>
            </value>
            <value>
                <fullName>Planting, growing, or cutting trees (pulpwood)/raking pine straw</fullName>
            </value>
            <value>
                <fullName>Processing/packing agricultural products</fullName>
            </value>
            <value>
                <fullName>Sod farm</fullName>
            </value>
            <value>
                <fullName>Tobacco farm</fullName>
            </value>
            <value>
                <fullName>Aquaculture/fish hatcheries</fullName>
            </value>
            <value>
                <fullName>Canning vegetables or fruits</fullName>
            </value>
            <value>
                <fullName>Dairy farm</fullName>
            </value>
            <value>
                <fullName>Duck, turkey, chicken, pork or beef processing plant</fullName>
            </value>
            <value>
                <fullName>Plant or harvest vegetables or fruits</fullName>
            </value>
            <value>
                <fullName>Planting, pruning or cutting trees</fullName>
            </value>
            <value>
                <fullName>Poultry and/or egg farm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>