force-app/main/default/objects/Account/fields/MigratoryChildrenNames__c.field-meta.xml
<CustomField>
    <fullName>MigratoryChildrenNames__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Migratory Children Names</label>
    <type>TextArea</type>
</CustomField>