force-app/main/default/objects/Account/fields/MigratoryInfo_CurrentWork__c.field-meta.xml
<CustomField>
    <fullName>MigratoryInfo_CurrentWork__c</fullName>
    <description>Does anyone in the immediate family currently work in the agriculture or fishing industries?</description>
    <label>Migratory Info Current Work</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>