force-app/main/default/objects/Account/fields/MigratoryInfoIdentifiedPersons__c.field-meta.xml
<CustomField>
    <fullName>MigratoryInfoIdentifiedPersons__c</fullName>
    <description>Please indicate which family member worked in the agriculture or fishing industries</description>
    <label>Migratory Info Identified Persons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>