force-app/main/default/objects/Account/fields/MigratoryWhenMovedDate__c.field-meta.xml
<CustomField>
    <fullName>MigratoryWhenMovedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Migratory When Moved Date</label>
    <type>Date</type>
</CustomField>