force-app/main/default/objects/Account/fields/Mktg_Customer_Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Mktg_Customer_Loyalty__c</fullName>
    <description>Returning family with an application for the new school year</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mktg Customer Loyalty</label>
    <length>50</length>
    <type>Text</type>
</CustomField>