force-app/main/default/objects/Account/fields/Number_of_Enrolled_Students__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Enrolled_Students__c</fullName>
    <label>Number of Enrolled Students</label>
    <summarizedField>Program_Grade_Level__c.Number_of_Enrolled_Students__c</summarizedField>
    <summaryForeignKey>Program_Grade_Level__c.Academic_Program__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>