force-app/main/default/objects/Account/fields/OffersTransitionalK__c.field-meta.xml
<CustomField>
    <fullName>OffersTransitionalK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added as part of the gap analysis Story 118665</description>
    <label>Offers TransitionalK</label>
    <type>Checkbox</type>
</CustomField>