force-app/main/default/objects/Account/fields/Open_Application__c.field-meta.xml
<CustomField>
    <fullName>Open_Application__c</fullName>
    <label>Open Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>