force-app/main/default/objects/Account/fields/Open_Application_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Application_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Open Application End Date</label>
    <type>DateTime</type>
</CustomField>