force-app/main/default/objects/Account/fields/Own_Or_Rent_Home__c.field-meta.xml
<CustomField>
    <fullName>Own_Or_Rent_Home__c</fullName>
    <label>Own Or Rent Home</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>