force-app/main/default/objects/Account/fields/Parent_School__c.field-meta.xml
<CustomField>
    <fullName>Parent_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Parent School)</relationshipLabel>
    <relationshipName>Parent_School_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>