force-app/main/default/objects/Account/fields/Possibly_Too_Old_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Possibly_Too_Old_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Possibly Too Old End Date</label>
    <type>Date</type>
</CustomField>