force-app/main/default/objects/Account/fields/Possibly_Too_Old_Start_Date_SPED__c.field-meta.xml
<CustomField>
    <fullName>Possibly_Too_Old_Start_Date_SPED__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Possibly Too Old Start Date (SPED)</label>
    <type>Date</type>
</CustomField>