force-app/main/default/objects/Account/fields/PossiblyOld_End__c.field-meta.xml
<CustomField>
    <fullName>PossiblyOld_End__c</fullName>
    <description>Birth date end date when a student may become too old to be eligible for an Academic Program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Possibly Too Old End Cutoff</label>
    <type>Date</type>
</CustomField>