force-app/main/default/objects/Account/fields/PossiblyOld_SpecialEd_End__c.field-meta.xml
<CustomField>
    <fullName>PossiblyOld_SpecialEd_End__c</fullName>
    <description>Birth date start date when a student may become too old to be eligible for an Academic Program&apos;s special education programs</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Possibly Too Old End Cutoff Special Ed</label>
    <type>Date</type>
</CustomField>