force-app/main/default/objects/Account/fields/PossiblyOld_Start__c.field-meta.xml
<CustomField>
    <fullName>PossiblyOld_Start__c</fullName>
    <description>Birth date start date when a student may become too old to be eligible for an Academic Program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Possibly Too Old Start Cutoff</label>
    <type>Date</type>
</CustomField>