force-app/main/default/objects/Account/fields/Potential_Unaccompanied_Youth__c.field-meta.xml
<CustomField>
    <fullName>Potential_Unaccompanied_Youth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator of whether the student(s) is living with a parent or legal guardian in their current living situation. A false value is an indication that the student(s) may be unaccompanied youth.</description>
    <label>Potential Unaccompanied Youth</label>
    <type>Checkbox</type>
</CustomField>