force-app/main/default/objects/Account/fields/Program_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program End Date</label>
    <type>DateTime</type>
</CustomField>