force-app/main/default/objects/Account/fields/Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Start Date</label>
    <type>DateTime</type>
</CustomField>