force-app/main/default/objects/Account/fields/PushToSecondSemester__c.field-meta.xml
<CustomField>
    <fullName>PushToSecondSemester__c</fullName>
    <description>This is when the second semester becomes the only option</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Push To Second Semester</label>
    <type>DateTime</type>
</CustomField>