force-app/main/default/objects/Account/fields/Referral_from_CA_Parent__c.field-meta.xml
<CustomField>
    <fullName>Referral_from_CA_Parent__c</fullName>
    <description>Did a Connections Academy parent recommend that you apply to our program</description>
    <label>Referral from CA Parent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>