force-app/main/default/objects/Account/fields/Referral_From_CA_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_From_CA_Parent_Name__c</fullName>
    <description>The name of the referring Connections Academy parent</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral from CA Parent Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>