force-app/main/default/objects/Account/fields/Registration_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_End_Date__c</fullName>
    <description>The date/time that registration in the academic program stops being available to CTs.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Registration End Date</label>
    <type>DateTime</type>
</CustomField>