force-app/main/default/objects/Account/fields/Registration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Start_Date__c</fullName>
    <description>The date/time that registration in the academic program will become available to CTs.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Registration Start Date</label>
    <type>DateTime</type>
</CustomField>