force-app/main/default/objects/Account/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>This field was created based on US #. 216768 (PI-03, Sprint-02).,Request Type&apos; used to capture the SIS Update Request.</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>