force-app/main/default/objects/Account/fields/Requires_Special_Education_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Special_Education_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Special Education Review</label>
    <type>Checkbox</type>
</CustomField>