force-app/main/default/objects/Account/fields/Restrict_to_SIS__c.field-meta.xml
<CustomField>
    <fullName>Restrict_to_SIS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Story 265237.  Some Program Enrollments should not be sent to SIS if their Academic Program is marked to exclude from sending.</description>
    <label>Restrict to SIS</label>
    <type>Checkbox</type>
</CustomField>