force-app/main/default/objects/Account/fields/SalesforceCustomer__c.field-meta.xml
<CustomField>
    <fullName>SalesforceCustomer__c</fullName>
    <label>Salesforce.com Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>