force-app/main/default/objects/Account/fields/School_Administrative_Unit_ME__c.field-meta.xml
<CustomField>
    <fullName>School_Administrative_Unit_ME__c</fullName>
    <description>The School Administrative Unit the household is in. (Maine ONLY)</description>
    <label>School Administrative Unit ME</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acton Public Schools~2</fullName>
            </value>
            <value>
                <fullName>Airline CSD~1038</fullName>
            </value>
            <value>
                <fullName>Alexander Public Schools~4</fullName>
            </value>
            <value>
                <fullName>Andover Public Schools~1734</fullName>
            </value>
            <value>
                <fullName>Appleton Public Schools~9</fullName>
            </value>
            <value>
                <fullName>Athens Public Schools~1629</fullName>
            </value>
            <value>
                <fullName>Auburn Public Schools~14</fullName>
            </value>
            <value>
                <fullName>Augusta Public Schools~28</fullName>
            </value>
            <value>
                <fullName>Baileyville Public Schools~38</fullName>
            </value>
            <value>
                <fullName>Bancroft Public Schools~1010</fullName>
            </value>
            <value>
                <fullName>Bangor Public Schools~42</fullName>
            </value>
            <value>
                <fullName>Bar Harbor Public Schools~53</fullName>
            </value>
            <value>
                <fullName>Baring Plt Public Schools~547</fullName>
            </value>
            <value>
                <fullName>Beals Public Schools~62</fullName>
            </value>
            <value>
                <fullName>Beaver Cove Public Schools~550</fullName>
            </value>
            <value>
                <fullName>Beddington Public Schools~64</fullName>
            </value>
            <value>
                <fullName>Biddeford Public Schools~65</fullName>
            </value>
            <value>
                <fullName>Blue Hill Public Schools~72</fullName>
            </value>
            <value>
                <fullName>Boothbay-Boothbay Hbr CSD~1031</fullName>
            </value>
            <value>
                <fullName>Bowerbank Public Schools~74</fullName>
            </value>
            <value>
                <fullName>Bremen Public Schools~77</fullName>
            </value>
            <value>
                <fullName>Brewer Public Schools~78</fullName>
            </value>
            <value>
                <fullName>Bridgewater Public Schools~86</fullName>
            </value>
            <value>
                <fullName>Brighton Plt School Department~1633</fullName>
            </value>
            <value>
                <fullName>Bristol Public Schools~88</fullName>
            </value>
            <value>
                <fullName>Brooklin Public Schools~90</fullName>
            </value>
            <value>
                <fullName>Brooksville Public Schools~92</fullName>
            </value>
            <value>
                <fullName>Brunswick Public Schools~94</fullName>
            </value>
            <value>
                <fullName>Burlington Public Schools~1824</fullName>
            </value>
            <value>
                <fullName>Byron Public Schools~1825</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>