force-app/main/default/objects/Account/fields/School_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Display_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>School Display Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>