force-app/main/default/objects/Account/fields/School_End_Date__c.field-meta.xml
<CustomField>
    <fullName>School_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>School End Date</label>
    <type>Date</type>
</CustomField>