force-app/main/default/objects/Account/fields/School_Id__c.field-meta.xml
<CustomField>
    <fullName>School_Id__c</fullName>
    <description>This field holds school unique Id values</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>School Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>