force-app/main/default/objects/Account/fields/School_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>School_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>School Start Date</label>
    <type>Date</type>
</CustomField>