force-app/main/default/objects/Account/fields/School_Year__c.field-meta.xml
<CustomField>
    <fullName>School_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Year</label>
    <referenceTo>School_Year__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>