force-app/main/default/objects/Account/fields/Second_Semester_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Semester_Confirmation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Second Semester Confirmation Date</label>
    <type>DateTime</type>
</CustomField>