force-app/main/default/objects/Account/fields/Second_Semester_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Semester_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Second Semester End Date</label>
    <type>Date</type>
</CustomField>