force-app/main/default/objects/Account/fields/Skype_Account__c.field-meta.xml
<CustomField>
    <fullName>Skype_Account__c</fullName>
    <description>The primary Skype account for the household.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Skype Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>