force-app/main/default/objects/Account/fields/Skype_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Skype_Contact_Number__c</fullName>
    <description>The primary Skype contact number for the household.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Family&apos;s Skype Contact Number</label>
    <type>Phone</type>
</CustomField>