force-app/main/default/objects/Account/fields/State_Wide_Program__c.field-meta.xml
<CustomField>
    <fullName>State_Wide_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State-Wide Program</label>
    <type>Checkbox</type>
</CustomField>