force-app/main/default/objects/Account/fields/StatusofPermanentResidency__c.field-meta.xml
<CustomField>
    <fullName>StatusofPermanentResidency__c</fullName>
    <label>Status of Permanent Residency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>