force-app/main/default/objects/Account/fields/Student_Last_Day__c.field-meta.xml
<CustomField>
    <fullName>Student_Last_Day__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Day of School for Students</label>
    <type>Date</type>
</CustomField>