force-app/main/default/objects/Account/fields/Students_Schooled_at_Home__c.field-meta.xml
<CustomField>
    <fullName>Students_Schooled_at_Home__c</fullName>
    <description>The total number of students that will be schooled in the home, even if they are not enrolling.</description>
    <label>Students Schooled at Home</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>