force-app/main/default/objects/Account/fields/TechnologyFlagAction__c.field-meta.xml
<CustomField>
    <fullName>TechnologyFlagAction__c</fullName>
    <description>Added for story 114150. Used to decide if this Academic Institution requires an in home computer and what should happen on the PE if it doesn&apos;t.</description>
    <label>Technology Flag Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Withdraw</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>