force-app/main/default/objects/Account/fields/Temporary_Or_Shared_Housing__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Or_Shared_Housing__c</fullName>
    <label>Temporary or Shared Housing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>