force-app/main/default/objects/Account/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(UTC-12:00) International Date Line West</fullName>
            </value>
            <value>
                <fullName>(UTC-11:00) Coordinated Universal Time-11</fullName>
            </value>
            <value>
                <fullName>(UTC-10:00) Aleutian Islands</fullName>
            </value>
            <value>
                <fullName>(UTC-10:00) Hawaii</fullName>
            </value>
            <value>
                <fullName>(UTC-09:30) Marquesas Islands</fullName>
            </value>
            <value>
                <fullName>(UTC-09:00) Alaska</fullName>
            </value>
            <value>
                <fullName>(UTC-09:00) Coordinated Universal Time-09</fullName>
            </value>
            <value>
                <fullName>(UTC-08:00) Baja California</fullName>
            </value>
            <value>
                <fullName>(UTC-08:00) Coordinated Universal Time-08</fullName>
            </value>
            <value>
                <fullName>(UTC-08:00) Pacific Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>(UTC-07:00) Arizona</fullName>
            </value>
            <value>
                <fullName>(UTC-07:00) Chihuahua, La Paz, Mazatlan</fullName>
            </value>
            <value>
                <fullName>(UTC-07:00) Mountain Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>(UTC-06:00) Central America</fullName>
            </value>
            <value>
                <fullName>(UTC-06:00) Central Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>(UTC-06:00) Easter Island</fullName>
            </value>
            <value>
                <fullName>(UTC-06:00) Guadalajara, Mexico City, Monterrey</fullName>
            </value>
            <value>
                <fullName>(UTC-06:00) Saskatchewan</fullName>
            </value>
            <value>
                <fullName>(UTC-05:00) Bogota, Lima, Quito, Rio Branco</fullName>
            </value>
            <value>
                <fullName>(UTC-05:00) Chetumal</fullName>
            </value>
            <value>
                <fullName>(UTC-05:00) Eastern Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>(UTC-05:00) Haiti</fullName>
            </value>
            <value>
                <fullName>(UTC-05:00) Havana</fullName>
            </value>
            <value>
                <fullName>(UTC-05:00) Indiana (East)</fullName>
            </value>
            <value>
                <fullName>(UTC-05:00) Turks and Caicos</fullName>
            </value>
            <value>
                <fullName>(UTC-04:00) Asuncion</fullName>
            </value>
            <value>
                <fullName>(UTC-04:00) Atlantic Time (Canada)</fullName>
            </value>
            <value>
                <fullName>(UTC-04:00) Caracas</fullName>
            </value>
            <value>
                <fullName>(UTC-04:00) Cuiaba</fullName>
            </value>
            <value>
                <fullName>(UTC-04:00) Georgetown, La Paz, Manaus, San Juan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>