force-app/main/default/objects/Account/fields/Too_Old_Other_Options_End__c.field-meta.xml
<CustomField>
    <fullName>Too_Old_Other_Options_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Too Old Other Options End</label>
    <type>Date</type>
</CustomField>