force-app/main/default/objects/Account/fields/Too_Old_Other_Options_End_SPED__c.field-meta.xml
<CustomField>
    <fullName>Too_Old_Other_Options_End_SPED__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Too Old Other Options End (SPED)</label>
    <type>Date</type>
</CustomField>