force-app/main/default/objects/Account/fields/Too_Old_Other_Options_Start_SPED__c.field-meta.xml
<CustomField>
    <fullName>Too_Old_Other_Options_Start_SPED__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Too Old Other Options Start (SPED)</label>
    <type>Date</type>
</CustomField>