force-app/main/default/objects/Account/fields/TooOld_Other_Option_SpecialEd_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TooOld_Other_Option_SpecialEd_End_Date__c</fullName>
    <description>Birth date end date when a student may become too old to be eligible for an Academic Program&apos;s special education programs, but may have other options available</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Too Old Other Options Sp Ed End Date</label>
    <type>Date</type>
</CustomField>